# stred-proto-go

./: .golangci.yml  .pylintrc  README.md  default.nix  go.mod  go.sum  main.go  protobuf_test.go  requirements.nix  requirements.txt  setup.cfg  stred_proto.py  types_test.go
protobuf/: core_test.go  document.go  enum.go  field.go  interface.go  message.go  number.go  reserved.go  service.go  type.go  types.go
protobuf/core/: doc.go  document.go  enum.go  field.go  flag.go  identifier.go  interface.go  label.go  map.go  message.go  number.go  oneof.go  print.go  print_test.go  reserved.go  service.go  type.go
tests/: test_basic.py
ui/: ui.go
