[metadata]
name = stred-proto
version = 0.0.0
author = fricklerhandwerk
author-email = valentin@fricklerhandwerk.de
summary = Terminal structure editor for protobuf

[options]
py_modules =
  stred_proto
install_requires =
  blessed

[options.entry_points]
console_scripts =
    stred-proto = stred_proto:main

[aliases]
test = pytest

[pycodestyle]
ignore = H404,H405
max-line-length = 100

[mypy]
ignore_missing_imports = true
